--- a/app/src/main/res/layout/activity_detailed_view_screen.xml
+++ b/app/src/main/res/layout/activity_detailed_view_screen.xml
@@ -9,19 +9,22 @@
 
     <Button
         android:id="@+id/btnBackToMain"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="401dp"
+        android:layout_height="53dp"
+        android:layout_marginStart="7dp"
+        android:layout_marginEnd="2dp"
         android:backgroundTint="#757575"
         android:padding="12dp"
         android:text="Back to Main"
         android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 
     <LinearLayout
         android:id="@+id/linearLayout2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="410dp"
+        android:layout_height="608dp"
         android:orientation="vertical"
         android:padding="20dp"
         tools:ignore="MissingConstraints">
@@ -54,12 +57,28 @@
             android:text="Calculate the rating"
             android:textSize="16sp" />
 
+        <TextView
+            android:id="@+id/txtAnswer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:hint="Rating"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/txtAnswer2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:hint="Rating"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
         <ListView
             android:id="@+id/ListView"
             android:layout_width="match_parent"
-            android:layout_height="389dp">
-
-        </ListView>
+            android:layout_height="346dp" />
 
     </LinearLayout>
 
